--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,14 @@ version: '3'
 services:
   jenkins:
     container_name: jenkins
-    image: jenkins-ansible 
+    image: jenkins/docker
     build:
-      context: jenkins-ansible
+      context: pipeline 
     ports:
       - "8080:8080"
     volumes:
       - $PWD/jenkins_home:/var/jenkins_home
+      - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - net
   remote_host:
@@ -20,6 +21,15 @@ services:
       - "$PWD/aws-s3.sh:/tmp/script.sh" 
     networks:
       - net
+  prod_host: 
+    container_name: prod-host
+    image: prod-host 
+    build: 
+      context: centos8
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    networks:
+      - net 
   db_host: 
     container_name: db 
     image: mysql:5.7 
